# devscript

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  alembic.ini  docker-compose.yaml  justfile  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.forgejo/workflows/: release.yml
alembic/: env.py
alembic/versions/: 1497fb563015_create_favorite_model.py  1a35cd2df96d_initial_migration.py  2dde5025784a_allow_snippet_to_be_blank.py  3b43d18b52d7_initial_migration.py  43671fc30235_added_last_login_at_to_providers.py  45e4f717fc15_add_snippet_archived_field.py  4ac78265087f_drop_validationtoken.py  52cb91a7e9aa_initial_migration.py  53a6a55cd136_initial_migration.py  5c2014344bb5_user_add_code_theme_settings.py  63c9889f9aee_updated_all_timestamp_defaults.py  6979532c43d3_add_timezone_support_to_datetime_columns.py  7a551176469f_initial_migration.py  7fddf1fcf6e7_initial_migration.py  83901b6f50f1_validationtoken.py  843eef5cffad_add_snippet_subtitle_field.py  84ca58312b61_add_admin_and_ban_fields.py  8617bffd28b2_.py  93bb2184a516_initial_migration.py  96f680fd26b6_user_invite.py  a8fdb1f2f8df_add_tag_created_at.py  ac79f83d6d6b_update_theme_field.py  b9c44848ed3e_initial_migration.py  bdfae0ed669c_add_tag_order_field.py  d29849ad0335_initial_migration.py  e1e5a2f3397a_add_pending_email_to_user.py  f6139d3f7ed5_initial_migration.py
app/: app.py  constants.py  email.py  logger.py  schemas.py  search.py  settings.py  templates.py  users.py  utils.py
app/api_keys/: __init__.py  apis.py  models.py  views.py
app/auth/: __init__.py  apis.py  constants.py  middleware.py  models.py  schemas.py  serializers.py  user.py  utils.py  views.py
app/common/: constants.py  db.py  email.py  exceptions.py  models.py  templates.py  utils.py
app/email/: config.py  send.py
app/models/: __init__.py  api_key.py  db.py  snippet.py  tag.py  user.py
app/routes/: __init__.py  api_key_routes.py  web_routes.py
app/snippets/: __init__.py  apis.py  models.py  schemas.py  search.py  serializers.py  signals.py  views.py
app/static/: app.css  app.js
app/styles/: app.css
app/templates/: 404.html  add_snippet.html  api_keys.html  base.html  dashboard.html  (+5 more)
docker/: entrypoint.sh
docs/: api.md  index.md
migrations/: env.py
(+140 files in other folders)
