[project]
name = "devscript"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]

dependencies = [
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "bcrypt==4.0.1",
    "blinker>=1.9.0",
    "fastapi-mail>=1.4.2",
    "fastapi-pagination>=0.12.34",
    "fastapi-sso>=0.17.0",
    "fastapi[standard]>=0.115.6",
    "greenlet>=3.1.1",
    "jinja2>=3.1.5",
    "loguru>=0.7.3",
    "markdown>=3.7",
    "pydantic-settings>=2.7.0",
    "pymdown-extensions>=10.13",
    "pyparsing>=3.2.1",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.2.0",
    "passlib>=1.7.4",
    "pyjwt>=2.10.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.49",
    "mkdocstrings-python>=1.13.0",
    "mkdocs-awesome-pages-plugin>=2.10.1",
    "mkdocs-swagger-ui-tag>=0.6.11",
    "mkdocs-macros-plugin>=1.3.7",
    "toml>=0.10.2",
    "humanfriendly>=10.0",
    "sentry-sdk[loguru]>=2.20.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-mock>=3.14.0",
    "ruff>=0.8.6",
]
